--- a/src/sass/__pagination.scss
+++ b/src/sass/__pagination.scss
@@ -2,7 +2,7 @@
   height: 40px;
   margin: 0;
   margin-top: 50px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .tui-pagination .tui-page-btn {
