add styles for dark theme pagination

--- a/src/sass/__pagination.scss
+++ b/src/sass/__pagination.scss
@@ -11,6 +11,10 @@
   width: 40px;
   padding-top: 13px;
   font-weight: 500;
+  background: #d5cecef5;
+  border-radius: 5px;
+  margin: 5px;
+  color: #413e3e;
   line-height: 1.33;
 
   &:hover,
