--- a/src/sass/components/_funny-pic.scss
+++ b/src/sass/components/_funny-pic.scss
@@ -1,3 +1,10 @@
 .funny {
-  width: 100%;
+    width: 274px;
+    height: auto;
+    margin-bottom: 60px;
+}
+
+.funny_wrapper{
+  display: flex;
+  justify-content: center;
 }
