--- a/src/partials/funny-pic.html
+++ b/src/partials/funny-pic.html
@@ -1,3 +1,3 @@
 <div class="funny_wrapper">
-  <img class="funny" src="/src/images/funny.jpg" alt="funny picture" />
+  <img class="funny" id="error_funny" src="/src/images/funny.jpg" alt="funny picture" />
 </div>
