--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -70,7 +70,11 @@
           <p class="team__position" lang="en">Scrum Master</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/SergeyShturma/filmoteka"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -199,7 +203,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/SergeyShturma/filmoteka"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -238,7 +246,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/SergeyShturma/filmoteka"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -277,7 +289,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/SergeyShturma/filmoteka"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -363,7 +379,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/SergeyShturma/filmoteka"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
