--- a/src/sass/base/_utils.scss
+++ b/src/sass/base/_utils.scss
@@ -1,9 +1,7 @@
-// *,
-// *::before,
-// *::after {
-//   -webkit-box-sizing: border-box;
-//   box-sizing: border-box;
-// }
+*{
+  margin: 0;
+  padding: 0;
+}
 
 body {
   min-height: 100vh;
