--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -204,7 +204,7 @@
           <ul class="social-list list">
             <li>
               <a
-                href="https://github.com/SergeyShturma/filmoteka"
+                href="https://github.com/laflame102"
                 class="social-list__link"
                 target="_blank"
               >
@@ -220,7 +220,11 @@
               </a>
             </li>
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://www.linkedin.com/notifications/?filter=all"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="linkedin icon"
